--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                 </div>
             </div>
         </div>
-        <img src="./images/scribble_dark_6.png" class="scribble_dark_6 scribble" alt="">
-        <img src="./images/scribble_dark_5.png" alt="" class="scribble_dark_5 scribble">
+        <img src="./images/scribble_dark_6.png" class="scribble_dark_6 scribble bigScreen" alt="">
+        <img src="./images/scribble_dark_5.png" alt="" class="scribble_dark_5 scribble bigScreen">
     </div>
     </section>
     <section class="placeContainer">
