--- a/index.html
+++ b/index.html
@@ -242,8 +242,11 @@
                     <h4>have to say...</h4>
                 </div>
                 <div class="reviewCardContainer">
-                    <div class="rightArrow bigScreen">
-                        <img src="./images/back.png" alt="">
+                    <div class="arrowCon rightArrow bigScreen">
+                        <div class="arrow smallArrow" style="transform: rotate(180deg);">
+                            <div class="slash slashOne small"> </div>
+                            <div class="slash slashTwo small">  </div>
+                            </div>
                     </div>
                     <div class="reviewCard">
                       <img src="./images/ellipse.png" alt="">
@@ -266,8 +269,11 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, set do ei usmod tempor incid idunt ut labore et dolore magna aliqua</p>
                         </div>
                       </div>
-                      <div class="leftArrow bigScreen">
-                        <img src="./images/next.png" alt="">
+                      <div class=" arrowCon leftArrow bigScreen">
+                        <div class="arrow smallArrow">
+                            <div class="slash slashOne small"> </div>
+                            <div class="slash slashTwo small">  </div>
+                            </div>
                       </div>
                 </div>
                 
